# clido-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  Makefile  PLAN.md  README.md  REFACTOR-PLAN.md  ai-audit.md  opus-anal.md  rust-toolchain.toml  tarpaulin.toml
.clido/: rules.md
.clido/plans/: define_project_structure_1774558451.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/clido-agent/: Cargo.toml
crates/clido-agent/src/: agent_loop.rs  exploration.rs  lib.rs  orchestrator.rs  provider_prompts.rs  sub_agent.rs
crates/clido-agent/src/agent_loop/: completion.rs  context.rs  doom.rs  history.rs  metrics.rs  mod.rs  parse.rs  planning.rs  retry_policy.rs  security.rs  stall.rs  stream_aggregate.rs  throttle.rs  validation.rs
crates/clido-agent/src/prompts/: architect.txt  default_agent_base.txt  harness_protocol.txt  mod.rs  workflow_phases.txt
crates/clido-agent/tests/: concurrent_correctness.rs  multi_agent_integration.rs  sub_agent_isolation.rs
crates/clido-checkpoint/: Cargo.toml
crates/clido-checkpoint/src/: lib.rs
crates/clido-cli/: Cargo.toml
crates/clido-cli/benches/: startup.rs
crates/clido-cli/src/: agent_setup.rs  audit_cmd.rs  checkpoint_cmd.rs  cli.rs  command_registry.rs  commit.rs  config.rs  doctor.rs  errors.rs  git_context.rs  image_input.rs  index_cmd.rs  list_picker.rs  main.rs  memory_cmd.rs  models.rs  notify.rs  overlay.rs  plan_cmd.rs  pricing_cmd.rs  profiles.rs  prompt_enhance.rs  provider.rs  repl.rs  run.rs  sessions.rs  setup.rs  skills_cmd.rs  spawn_tools.rs  stats.rs  text_input.rs  tui.rs  ui.rs  update_check.rs  workflow.rs
crates/clido-cli/src/setup/: config.rs  event_loop.rs  mod.rs  render.rs  types.rs
crates/clido-cli/src/tui/: app_state.rs  commands.rs  config.rs  copy.rs  event_loop.rs  events.rs  input.rs  mod.rs  permissions.rs  render.rs  selection_tests.rs  state.rs
crates/clido-cli/src/tui/component/: chat.rs  header.rs  input.rs  mod.rs  shell.rs  status.rs
crates/clido-cli/src/tui/input/: mod.rs  overlay.rs  plan_editor.rs  profile.rs  scroll.rs  workflow_editor.rs
crates/clido-cli/src/tui/render/: diff.rs  mod.rs  mod.rs.backup  plan.rs  profile.rs  proptests.rs  status_panel.rs  surfaces.rs  tests.rs  welcome.rs  widgets.rs
crates/clido-cli/tests/: integration.rs  v3_integration.rs
crates/clido-context/: Cargo.toml
crates/clido-context/src/: lib.rs  read_cache.rs  rules.rs
crates/clido-core/: Cargo.toml
crates/clido-core/src/: config.rs  config_loader.rs  error.rs  lib.rs  model_prefs.rs  pricing.rs  tool_failure.rs
crates/clido-core/src/skills/: mod.rs
crates/clido-harness/: Cargo.toml
crates/clido-harness/src/: error.rs  lib.rs  state.rs  store.rs
crates/clido-index/: Cargo.toml
crates/clido-index/src/: lib.rs
crates/clido-memory/: Cargo.toml
crates/clido-memory/src/: lib.rs  shared.rs
crates/clido-planner/: Cargo.toml
crates/clido-planner/src/: editor.rs  executor.rs  graph.rs  lib.rs  parser.rs  storage.rs
crates/clido-planner/tests/: planner_tests.rs
crates/clido-providers/: Cargo.toml
crates/clido-providers/src/: anthropic.rs  backoff.rs  fallback.rs  http_client.rs  lib.rs  model_cache.rs  model_fetcher.rs  openai.rs  provider.rs  rate_limit.rs  registry.rs  retry.rs  sse.rs
crates/clido-storage/: Cargo.toml
crates/clido-storage/src/: audit.rs  lib.rs  paths.rs  session.rs
crates/clido-tools/: Cargo.toml
crates/clido-tools/src/: bash.rs  diagnostics.rs  edit.rs  exit_plan_mode.rs  explore_parallel.rs  file_tracker.rs  git_tool.rs  glob_tool.rs  grep_tool.rs  harness_control.rs  lib.rs  mcp.rs  multi_edit.rs  path_guard.rs  read.rs  registry.rs  semantic_search.rs  spawn_reviewer.rs  test_loop.rs  test_runner.rs  todo_write.rs  truncate.rs  web_fetch.rs  web_search.rs  write.rs
crates/clido-workflows/: Cargo.toml
crates/clido-workflows/src/: context.rs  executor.rs  lib.rs  loader.rs  template.rs  types.rs
crates/clido-workflows/tests/: workflow_tests.rs
devdocs/: ARTIFACTS.md  Instructions.md  README.md  REPORT.md  ascii.txt
devdocs/guides/: implementation-bootstrap.md  local-development-testing.md
devdocs/plans/: cli-interface-specification.md  development-plan.md  ui-implementation-plan.md  ux-requirements.md
devdocs/plans/releases/: README.md  v1-5-dod.md  v1-5-dod.yaml  v1-5.md  v1-dod.md  v1-dod.yaml  v1.md  v2-dod.md  v2-dod.yaml  v2.md  v3-dod.md  v3-dod.yaml  v3.md  v4-dod.md  v4-dod.yaml  v4-preconditions.md  v4.md
doc/: help.html  settings.html
doc/null/: all.html  index.html
doc/search.index/: root.js
doc/src/null/: null.html
docs/: clido.md  index.md
docs/.vitepress/: config.ts
docs/developer/: adding-tools.md  agent-loop-interrupt-semantics.md  agent-loop-production-plan.md  agent-session-persistence.md  architecture.md  building.md  contributing.md  crates.md  production-readiness-phases.md
docs/guide/: configuration.md  first-run.md  harness.md  index-search.md  installation.md  introduction.md  mcp.md  planner.md  providers.md  quick-start.md  running-prompts.md  sessions.md  skills.md  tui.md  workflows.md
docs/landing/: carousel.css  index.html  og-frame.html  style.css  tui.css
docs/reference/: cli.md  config.md  env-vars.md  exit-codes.md  flags.md  key-bindings.md  output-formats.md  plan-schema.md  slash-commands.md
scripts/: install.sh  run-in-test-env.sh  verify-dod.sh
workflows/: sa2.yaml  solidity-audit.yaml
{{ cwd }}/sa2-audit-results/orchestration/: selected-repo.txt
~/git/tmp/audit-test/valantis-stex/.clido-audit/confirmed/: findings.json
~/git/tmp/audit-test/valantis-stex/.clido-audit/investigation/: adjudication.json  adversarial.json  counterarguments.json  deep-findings.json  narrative-clusters.json  plausibility.json  sequence-clusters.json  sequence-feasibility.json  sequence-verification.json
~/git/tmp/audit-test/valantis-stex/.clido-audit/narratives/: multi-step-sequences.json
~/git/tmp/audit-test/valantis-stex/.clido-audit/proofs/: poc-results.json
~/git/tmp/audit-test/valantis-stex/.clido-audit/report/: kb-update.json  (+3 more)
(+7 files in other folders)
