[workspace]
members = [
  "crates/clido-core",
  "crates/clido-tools",
  "crates/clido-providers",
  "crates/clido-context",
  "crates/clido-storage",
  "crates/clido-memory",
  "crates/clido-planner",
  "crates/clido-index",
  "crates/clido-agent",
  "crates/clido-workflows",
  "crates/clido-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
glob = "0.3"
ignore = "0.4"
regex = "1"
grep = "0.3"
async-trait = "0.1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
inquire = "0.9"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
