[workspace]
members = [
  "crates/clido-core",
  "crates/clido-tools",
  "crates/clido-providers",
  "crates/clido-context",
  "crates/clido-storage",
  "crates/clido-memory",
  "crates/clido-planner",
  "crates/clido-index",
  "crates/clido-agent",
  "crates/clido-workflows",
  "crates/clido-cli",
  "crates/clido-checkpoint",
  "crates/clido-harness",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
glob = "0.3"
ignore = "0.4"
regex = "1"
async-trait = "0.1"
toml = "0.8"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
similar = "2"
inquire = "0.9"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
libc = "0.2"
clap_complete = "4"
clap_mangen = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
base64 = "0.22"
jsonschema = "0.26"
