[package]
name = "clido-agent"
version = "0.1.0-beta.13"
edition = "2021"

[lib]
doctest = false

[dependencies]
clido-context = { path = "../clido-context" }
clido-core = { path = "../clido-core" }
clido-memory = { path = "../clido-memory" }
clido-providers = { path = "../clido-providers" }
clido-storage = { path = "../clido-storage" }
clido-tools = { path = "../clido-tools" }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
similar = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
