[package]
name = "clido-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clido"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clido-agent = { path = "../clido-agent" }
clido-core = { path = "../clido-core" }
clido-providers = { path = "../clido-providers" }
clido-storage = { path = "../clido-storage" }
clido-tools = { path = "../clido-tools" }
clido-workflows = { path = "../clido-workflows" }
clap = { workspace = true, features = ["derive", "env"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
inquire = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }

