[package]
name = "clido-cli"
version = "1.0.15"
edition = "2021"

[[bin]]
name = "clido"
path = "src/main.rs"

[[bench]]
name = "startup"
harness = false

[dev-dependencies]
criterion = { workspace = true }
proptest = "1"
tempfile = "3"
async-trait = { workspace = true }
serde_json = { workspace = true }
clido-workflows = { path = "../clido-workflows" }
clido-memory = { path = "../clido-memory" }
clido-index = { path = "../clido-index" }
clido-agent = { path = "../clido-agent" }
clido-tools = { path = "../clido-tools" }
clido-core = { path = "../clido-core" }
clido-providers = { path = "../clido-providers" }
futures = { workspace = true }
tokio = { workspace = true }

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clido-agent = { path = "../clido-agent" }
clido-context = { path = "../clido-context" }
clido-core = { path = "../clido-core" }
clido-index = { path = "../clido-index" }
clido-memory = { path = "../clido-memory" }
clido-planner = { path = "../clido-planner" }
clido-providers = { path = "../clido-providers" }
clido-storage = { path = "../clido-storage" }
clido-tools = { path = "../clido-tools" }
clido-workflows = { path = "../clido-workflows" }
clido-checkpoint = { path = "../clido-checkpoint" }
clido-harness = { path = "../clido-harness" }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
inquire = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
toml = { workspace = true }
pulldown-cmark = "0.9"
unicode-width = "0.2"
serde_yaml = "0.9"
notify-rust = { version = "4", optional = true }
base64 = { workspace = true }
reqwest = { workspace = true }
semver = "1"

[features]
desktop-notify = ["dep:notify-rust"]
