[package]
name = "clido-context"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
clido-core = { path = "../clido-core" }
tracing = "0.1"
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
