[package]
name = "clido-core"
version = "0.1.0-beta.14"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
