[package]
name = "clido-index"
version = "0.1.0-beta.9"
edition = "2021"

[lib]
doctest = false

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = "3"
