[package]
name = "clido-index"
version = "1.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = "3"
