[package]
name = "clido-memory"
version = "0.1.0-beta.2"
edition = "2021"

[lib]
doctest = false

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
