[package]
name = "clido-planner"
version = "0.1.0-beta.9"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
