[package]
name = "clido-providers"
version = "0.1.0-beta.10"
edition = "2021"

[lib]
doctest = false

[dependencies]
clido-core = { path = "../clido-core" }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
