[package]
name = "clido-tools"
version = "0.1.0-beta.8"
edition = "2021"

[lib]
doctest = false

[dependencies]
clido-core = { path = "../clido-core" }
clido-context = { path = "../clido-context" }
clido-harness = { path = "../clido-harness" }
clido-index = { path = "../clido-index" }
clido-memory = { path = "../clido-memory" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
similar = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
libc = { workspace = true }
jsonschema = { workspace = true }
