[package]
name = "clido-workflows"
version = "1.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tera = "1"
clido-core = { path = "../clido-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
